...
    }
    
    enum Onboarding {
        static let onboardingView = "onboarding_View"
        static let joinButton = "join_button"
        static let alreadyMemberLabel = "already_member_label"
        static let loginButton = "login_button"
        static let image = "onboarding_image"
        static let pageDescription = "onboarding_description"
    }
    
    enum Signup {
        static let joinLabel = "Join"
...
