//
//  BadgeType.swift
//  MyNTORewards
//
//  Created by Vasanthkumar Velusamy on 26/03/24.
//

import Foundation

enum BadgeType {
	case achieved
	case available
	case expired
}
